--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         header {
-            background-color: #4CAF50;
+            background-color:#FFFFFF;
             color: white;
             padding: 15px;
             text-align: center;
         }
         h1 {
-            font-size: 24px;
+            font-size: 30px;
             color: #333;
         }
         p {
@@ -49,7 +49,7 @@
             border-radius: 5px;
         }
         .login-button:hover {
-            background-color: black;
+            background-color: #000000;
         }
     </style>
 </head>
