--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             display: block;
             width: 200px;
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #000000;
             color: white;
             text-align: center;
             margin: 30px auto;
