--- a/index.html
+++ b/index.html
@@ -14,55 +14,80 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+ 
+        header {
+            background-color: #0078d4; /* Blue background */
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+ 
+        header h1 {
+            margin: 0;
+        }
+ 
+        header .support-btn {
+            background-color: #ff6600; /* Orange button color */
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            margin-top: 10px;
+            display: inline-block;
+        }
+ 
+        header .support-btn:hover {
+            background-color: #e65c00; /* Darker orange on hover */
+        }
+ 
         .container {
             width: 80%;
-            margin: auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            margin: 40px auto;
         }
-        header {
-            background-color:#FFFFFF;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-        h1 {
-            font-size: 30px;
+ 
+        h2 {
             color: #333;
         }
+ 
         p {
-            font-size: 16px;
             line-height: 1.6;
             color: #555;
         }
-        .login-button {
-            display: block;
-            width: 200px;
-            padding: 10px;
-            background-color: #000000;
+ 
+        .step {
+            background-color: #e0f7fa;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+ 
+        footer {
+            background-color: #333;
             color: white;
             text-align: center;
-            margin: 30px auto;
-            text-decoration: none;
-            font-size: 16px;
-            border-radius: 5px;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
-        .login-button:hover {
-            background-color: #000000;
+ 
+        ol {
+            list-style-type: none; /* Hides numbers */
         }
     </style>
 </head>
 <body>
+ 
+    <header>
+        <h1>How to Download ESET Antivirus Software?</h1>
+        <a href="https://i-downloadsoftwares.com/" class="downlaod-btn">Download</a>
+    </header>
+ 
     <div class="container">
-        <header>
-            <h1>How to Download ESET Antivirus Software</h1>
-        </header>
 
         <p>If you're looking to enhance your device's security, ESET antivirus is one of the top-rated solutions available. In this guide, we will walk you through the steps on how to download ESET, and provide you with everything you need to know about the ESET downloading process. Whether you're a first-time user or looking to reinstall the software, this article will ensure you have all the necessary information.</p>
- 
-        <a href="https://i-downloadsoftwares.com/" class="download-button">Download</a>
-        
+    
         <p>Let's dive into the details of how to perform an ESET download and install it on your system. ESET offers various versions of its antivirus, tailored to meet different needs, whether for home or business use. By the end of this guide, you’ll be able to confidently download and install ESET and protect your devices from a variety of cyber threats.</p>
 
         <h2>Why Choose ESET Antivirus?</h2>
